[package]
name = "jasmine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = {path = "../util"}
async-trait = "0.1.53"
tokio = {version = "1.18.2", features = ["full"]} 
tonic = "0.6"
serde = {version = "1.0.137", features = ["derive"]}
toml = "0.5.9"

[dev-dependencies]
criterion = "0.3"

[dependencies.redis]
version = "*"

[[bench]]
name = "jasmine_benchmark"
harness = false






