[package]
name = "jasmine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = {path = "../util"}
async-trait = "0.1.53"
tokio = {version = "1.18.2", features = ["full"]} 
tonic = "0.6"
serde = {version = "1.0.137", features = ["derive"]}
toml = "0.5.9"
bencher = "0.1.5"
pub-sub = "*"
rskafka = "0.2.0"
time = "0.3.9"
zookeeper = "0.6.1"
criterion = {version = "0.3.5", features = ["async_tokio"]}
serde_bytes = "0.11"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = { version = "3.0", features = ["derive"] }

[dev-dependencies]
criterion = {version = "0.3.5", features = ["async_tokio"]}


[dependencies.redis]
version = "*"

[[bench]]
name = "jasmine_benchmark"
harness = false






