[package]
name = "zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zookeeper = "0.6.1"

util = {path = "../util"}
serde = {version = "1.0.137", features = ["derive"]}
serde_bytes = "0.11"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

